// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/gallery-masonry should have \`core/image\` innerBlocks rendered 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"medium\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped has-medium-gutter\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-2.jpg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have caption with \`core/image\` and caption with \`coblocks/masonry\`. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"medium\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped has-medium-gutter\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-2.jpg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":3} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-3.jpg\\" alt=\\"\\" class=\\"wp-image-3\\"/><figcaption>Test Caption</figcaption></figure>
<!-- /wp:image --></figure><figcaption class=\\"blocks-gallery-caption\\">Masonry Caption</figcaption>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-border-radius-10' with radius set to 10. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"medium\\",\\"radius\\":10} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped has-border-radius-10 has-medium-gutter\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-2.jpg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-large-gutter' with gutter set to 'large'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"large\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped has-large-gutter\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-2.jpg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-lightbox' with lightbox enabled. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"medium\\",\\"lightbox\\":true} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid has-lightbox is-cropped has-medium-gutter\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-2.jpg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-medium-gutter' with gutter set to 'medium'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"medium\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped has-medium-gutter\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-2.jpg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;

exports[`coblocks/gallery-masonry should have className 'has-small-gutter' with gutter set to 'small'. 1`] = `
"<!-- wp:coblocks/gallery-masonry {\\"gutter\\":\\"small\\"} -->
<figure class=\\"wp-block-coblocks-gallery-masonry masonry-grid is-cropped has-small-gutter\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.jpg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-2.jpg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:coblocks/gallery-masonry -->"
`;
